<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/rectangle_drawable"
    tools:context="net.jhopo.nonodroid.updatetime_edit">

    <TextView
        android:id="@+id/edit_name_text"
        android:text="@string/edit_updatetime"
        android:textColor="@color/black"
        android:background="@drawable/rectangle_drawable"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="13dp"
        android:id="@+id/radioGroup">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton1"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton2"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton3"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton4"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton5"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton6"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton7"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fin_update"
            android:textColor="@color/blue_grey"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/radioButton8"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </RadioGroup>

    <Button
        android:id="@+id/cancel_edit_update"
        android:text="@string/cancel_update"
        android:textSize="@dimen/option_delete_size"
        android:onClick="onSubmit"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/delete_option"
        android:layout_below="@+id/radioGroup"
        android:layout_alignRight="@+id/edit_name_text"
        android:layout_alignEnd="@+id/edit_name_text" />



</RelativeLayout>
