<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.jhopo.nonodroid.AddAnimeActivity">

    <EditText
        android:id="@+id/title_text"
        android:hint="@string/enter_title"
        android:background="@drawable/rectangle_drawable"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/cancel_item"
        android:text="@string/cancel"
        android:onClick="onSubmit"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:layout_alignTop="@+id/ok_item"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#E0F2F1" />

    <Button
        android:id="@+id/ok_item"
        android:text="@string/ok"
        android:onClick="onSubmit"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp"
        android:background="#E0F2F1"
        android:layout_below="@+id/title_text"
        android:layout_alignRight="@+id/title_text"
        android:layout_alignEnd="@+id/title_text" />

</RelativeLayout>
