<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.jhopo.nonodroid.PreMainActivity">

    <EditText
        android:id="@+id/username_text"
        android:hint="@string/input_username"
        android:background="@drawable/rectangle_drawable"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:onClick="onSubmit"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E0F2F1"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/username_text"
        android:layout_alignRight="@+id/username_text"
        android:layout_alignEnd="@+id/username_text"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/line"
        android:layout_below="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textColor="@color/dkkgreen"
        android:textSize="@dimen/info_name_size"
        android:id="@+id/enter_animedata"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="start|center_vertical"
        android:layout_below="@+id/login"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/saber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/enter_animedata" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_username"
        android:textColor="@color/dkkgreen"
        android:textSize="@dimen/info_name_size"
        android:id="@+id/save_animedata"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="start|center_vertical"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/enter_animedata"
        android:layout_alignStart="@+id/enter_animedata" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/illl"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/offline"
        android:textColor="@color/pink"
        android:id="@+id/status"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login" />

</RelativeLayout>
