<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/rectangle_drawable"
    tools:context="net.jhopo.nonodroid.ep_edit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/edittext"
        android:textSize="@dimen/text_delete_size"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_name_text"
        android:hint="@string/edit_epi_title"
        android:background="@drawable/rectangle_drawable"
        android:padding="6sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ok_edit_name"
        android:text="@string/edit_name_ok"
        android:textSize="@dimen/option_delete_size"
        android:onClick="onSubmit"
        android:padding="6sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name_text"
        android:layout_alignRight="@+id/edit_name_text"
        android:layout_alignEnd="@+id/edit_name_text"
        android:layout_marginTop="25dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/delete_option" />

</RelativeLayout>
